# vaxxinate

./: Cargo.toml  Makefile
.github/workflows/: rust.yaml
assets/aesprite/: baby.aseprite  vaccine.aseprite
config/: default.hjson
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/game/: insertable.rs  mod.rs  physics.rs  physics_world.rs  renderable.rs  updatable.rs  view.rs  world.rs
src/game/bullet/: mod.rs
src/game/enemy/: mod.rs
src/game/enemy/baby/: mod.rs
src/game/player/: character.rs  player.rs
src/game/projectile/bullet/: mod.rs  standard.rs
