[package]
name = "zombies"
version = "0.1.0"
authors = ["nhyne <nhyne@nhyne.dev>"]
edition = "2018"

[dependencies]
piston_window = "0.105.0"
pistoncore-input = "0.28.0"
ncollide2d    = "0.21.0"
nalgebra      = "0.19"
nphysics2d    = "0.13.1"
vecmath = "1.0.0"
piston2d-opengl_graphics = "0.70.0"
piston2d-graphics = "0.35.0"
piston2d-sprite = "0.58.0"
uuid = "0.6"
gfx_device_gl = "0.16.2"
find_folder = "0.3.0"
