[package]
name = "zombies"
version = "0.1.0"
authors = ["nhyne <nhyne@nhyne.dev>"]
edition = "2018"

[dependencies]
piston_window = "0.107.0"
pistoncore-input = "0.28.0"
ncollide2d    = "0.22.0"
nalgebra      = "0.20"
nphysics2d    = "0.14.0"
vecmath = "1.0.0"
piston2d-opengl_graphics = "0.72.0"
piston2d-graphics = "0.36.0"
piston2d-sprite = "0.59.0"
uuid = "0.6.5"
gfx_device_gl = "0.16.2"
find_folder = "0.3.0"
